src/test/resources/public/input/typechecking/fail/double_decl/fail01.jova
class Test{

}

class Main {

  public int main() {
    int a;
    int a;
    return 0;
  }

}